--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev ",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@clerk/nextjs": "5.0.0-beta.46",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^7.3.0",
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
     "next": "^14.2.1",
     "postgres": "^3.4.4",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "server-only": "^0.0.1",
+    "uploadthing": "^7.6.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
